Pushing to ionic

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -22,7 +22,7 @@
     <h2 (click)="editname()">{{displayName}}</h2>
   </div>
   <div>
-    Tap on your pic or nick name to change it.
+    Tap on your pic or nick name to change it
   </div>
   <div class="spacer" style="height: 10px;"></div>
   <div>
