--- a/src/pages/buddychat/buddychat.html
+++ b/src/pages/buddychat/buddychat.html
@@ -26,7 +26,7 @@
         <ion-avatar item-right *ngIf="item.sentby != buddy.uid">
           <img src="{{photoURL}}">
         </ion-avatar>
-        <div class="bubble you" *ngIf="item.sentby != buddy.uid">
+        <div class="bubblegreen you" *ngIf="item.sentby != buddy.uid">
           <h3>{{item.message}}</h3>
         </div>
       </ion-item>
