--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,7 +12,7 @@
 <ion-content class="background">
   <ion-card>
     <ion-card-header>
-      Login
+      LOGIN
     </ion-card-header>
     <ion-card-content>
       <ion-list no-lines>
@@ -32,6 +32,7 @@
         <p>OR</p>
         <div class="spacer" style="height: 10px;"></div>
         <button ion-button clear full color="light" (click)="signup()">Don't have an account? Sign up</button>
+        <!--<button ion-button clear full color="light" (click)="gomain()">Go Back</button>-->
       </ion-list>
     </ion-card-content>
   </ion-card>
