--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -12,7 +12,7 @@
 <ion-content class="background">
   <ion-card>
     <ion-card-header>
-      Signup
+      SIGNUP
     </ion-card-header>
     <ion-card-content>
       <ion-list >
