--- a/src/pages/groupchat/groupchat.html
+++ b/src/pages/groupchat/groupchat.html
@@ -28,19 +28,19 @@
   <div class = "chatwindow">
     <ion-list no-lines>
       <ion-item *ngFor = "let item of allgroupmsgs; let i = index" text-wrap>
-        <ion-avatar item-left *ngIf="item.sentby === alignuid">
+        <ion-avatar item-left *ngIf="item.sentby != alignuid">
           <img src="{{photoURL}}">
         </ion-avatar>
-        <div class="bubblegreen me" *ngIf="item.sentby === alignuid">
+        <div class="bubble me" *ngIf="item.sentby != alignuid">
           <h6 style="color: mediumpurple;">{{item.displayName}}</h6>
           <h3 *ngIf="!imgornot[i]">{{item.message}}</h3>
           <img src="{{item.message}}" *ngIf="imgornot[i]">
           <p><small>{{item.timestamp}}</small></p>
         </div>
-        <ion-avatar item-right *ngIf="item.sentby != alignuid">
+        <ion-avatar item-right *ngIf="item.sentby === alignuid">
           <img src="{{item.photoURL}}">
         </ion-avatar>
-        <div class="bubble you" *ngIf="item.sentby != alignuid">
+        <div class="bubblegreen you" *ngIf="item.sentby === alignuid">
           <h6 style="color: mediumvioletred;">{{item.displayName}}</h6>
           <h3 *ngIf="!imgornot[i]">{{item.message}}</h3>
           <img src="{{item.message}}" *ngIf="imgornot[i]">
