first try fixing imageupload

--- a/src/pages/profilepic/profilepic.html
+++ b/src/pages/profilepic/profilepic.html
@@ -16,7 +16,7 @@
     <img src="{{imgurl}}">
   </div>
   <div>
-    <button ion-button round outline (click)="chooseimage()">Choose an image</button>
+    <button ion-button round outline (click)="choose()">Choose an image</button> <!-- chooseimage()-->
   </div>
   <div [hidden]="!moveon">
     <button ion-button round outline (click)="proceed()">Skip this step</button>
