--- a/src/pages/buddychat/buddychat.html
+++ b/src/pages/buddychat/buddychat.html
@@ -9,7 +9,7 @@
   <ion-navbar color="hcolor">
     <ion-title>{{buddy.displayName}}</ion-title>
     <ion-buttons end>
-      <button ion-button (click)="sendPicMsg()">
+      <button ion-button (click)="sendPic()">
         <ion-icon name="camera"></ion-icon>
       </button>
     </ion-buttons>
