upload group img fixed

--- a/src/pages/groupchat/groupchat.html
+++ b/src/pages/groupchat/groupchat.html
@@ -9,7 +9,7 @@
   <ion-navbar color="hcolor">
     <ion-title>{{groupName}}</ion-title>
     <ion-buttons end>
-      <button ion-button (click)="sendpicmsg()">
+      <button ion-button (click)="sendPic()">
         <ion-icon name="camera"></ion-icon>
       </button>
       <button *ngIf="owner" ion-button icon-only (click)="presentOwnerSheet()">
@@ -36,6 +36,7 @@
           <h3 *ngIf="!imgornot[i]">{{item.message}}</h3>
           <img src="{{item.message}}" *ngIf="imgornot[i]">
           <p><small>{{item.timestamp}}</small></p>
+          <!--<p><small>{{item.timestamp}}</small></p>-->
         </div>
         <ion-avatar item-right *ngIf="item.sentby === alignuid">
           <img src="{{item.photoURL}}">
@@ -45,6 +46,7 @@
           <h3 *ngIf="!imgornot[i]">{{item.message}}</h3>
           <img src="{{item.message}}" *ngIf="imgornot[i]">
           <p><small>{{item.timestamp}}</small></p>
+          <!--<p><small>{{item.timestamp}}</small></p>-->
         </div>
       </ion-item>
     </ion-list>
