--- a/src/pages/mainpage/mainpage.html
+++ b/src/pages/mainpage/mainpage.html
@@ -23,7 +23,7 @@
     <ion-card-content>
       <ion-list no-lines>
         <div class="spacer" style="height: 10px;"></div>
-        <ion-img width="180" height="130" src="../../assets/imgs/chat.gif"></ion-img>
+        <ion-img width="180" height="130" src="../../assets/imgs/chat.gif" imageViewer></ion-img>
         <div class="spacer" style="height: 25px;"></div>
         <button ion-button block round outline color="light" (click)="entrar()">Entrar</button>
         <div class="spacer" style="height: 10px;"></div>
