--- a/src/pages/groups/groups.html
+++ b/src/pages/groups/groups.html
@@ -25,7 +25,7 @@
     </ion-list-header>
     <ion-item *ngFor="let item of allmygroups">
       <ion-avatar item-left>
-        <img src="{{item.groupimage}}">
+        <img src="{{item.groupimage}}" #myImage (click)="presentImage(myImage)">
       </ion-avatar>
       <h3 (click)="openchat(item)">{{item.groupName}}</h3>
     </ion-item>
