remove user account done!

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -26,6 +26,9 @@
   </div>
   <div class="spacer" style="height: 10px;"></div>
   <div>
+    <button ion-button round color="danger" (click)="removeuser()">Delete account</button>
+  </div>
+  <div>
     <button ion-button round outline color="danger" (click)="logout()">Logout</button>
   </div>
 
