show and edit email in user's profile

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -22,7 +22,10 @@
     <h2 (click)="editname()">{{displayName}}</h2>
   </div>
   <div>
-    Tap on your pic or nick name to change it
+    <h2 (click)="editemail()">{{email}}</h2>
+  </div>
+  <div>
+    Tap on your pic, email or nickname to change it
   </div>
   <div class="spacer" style="height: 10px;"></div>
   <div>
