--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -29,6 +29,9 @@
   </div>
   <div class="spacer" style="height: 10px;"></div>
   <div>
+    <button ion-button round color="warning" (click)="changepassword()">Change Password</button>
+  </div>
+  <div>
     <button ion-button round color="danger" (click)="removeuser()">Delete account</button>
   </div>
   <div>
