import cloudinary (bugs)

--- a/src/pages/mainpage/mainpage.html
+++ b/src/pages/mainpage/mainpage.html
@@ -24,6 +24,9 @@
       <ion-list no-lines>
         <div class="spacer" style="height: 10px;"></div>
         <ion-img width="180" height="130" src="../../assets/imgs/chat.gif" imageViewer></ion-img>
+        <!--<cl-image public-id="chat.gif" >
+          <cl-transformation height="130" width="180" ></cl-transformation>
+        </cl-image>-->
         <div class="spacer" style="height: 25px;"></div>
         <button ion-button block round outline color="light" (click)="entrar()">Entrar</button>
         <div class="spacer" style="height: 10px;"></div>
