addind some examples w/cloudinary (video + images)

--- a/src/pages/mainpage/mainpage.html
+++ b/src/pages/mainpage/mainpage.html
@@ -11,19 +11,22 @@
 
 
 
-
+<ion-content>
+  <video autoplay loop src="https://res.cloudinary.com/daw2-ulpgc/video/upload/v1524668202/Starry_night_sky_with_moving_stars_hd720.mp4"></video>
+</ion-content>
 
 
 <ion-content class="background">
 
   <ion-card>
     <ion-card-header>
-      IONIC CHAT
+      IONIC + FIREBASE CHAT
     </ion-card-header>
     <ion-card-content>
+
       <ion-list no-lines>
         <div class="spacer" style="height: 10px;"></div>
-        <ion-img width="180" height="130" src="../../assets/imgs/chat.gif" imageViewer></ion-img>
+        <ion-img width="180" height="130" src="https://res.cloudinary.com/daw2-ulpgc/image/upload/v1524598220/chat.gif" imageViewer></ion-img>
         <!--<cl-image public-id="chat.gif" >
           <cl-transformation height="130" width="180" ></cl-transformation>
         </cl-image>-->
