--- a/src/pages/mainpage/mainpage.html
+++ b/src/pages/mainpage/mainpage.html
@@ -20,7 +20,7 @@
 
   <ion-card>
     <ion-card-header>
-      IONIC + FIREBASE CHAT
+      <span>IONMESS</span>: IONIC + FIREBASE CHAT
     </ion-card-header>
     <ion-card-content>
 
